feat(style): apply coreUI's ListGroup UI in TodoList

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "repository": "https://github.com/Ruwen-Yi/react-comprehensive-project.git",
+  "license": "MIT",
   "description": "React example starter project",
   "keywords": [
     "react",
@@ -8,6 +10,8 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@coreui/coreui": "^5.0.0-alpha.2",
+    "@coreui/react": "^5.0.0-alpha.3",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
