--- a/chatRoom/server/package.json
+++ b/chatRoom/server/package.json
@@ -4,5 +4,8 @@
   "description": "chatroom of the server side",
   "main": "index.js",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "ws": "^8.14.2"
+  }
 }
