--- a/chatRoom/server/package.json
+++ b/chatRoom/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "chatroom of the server side",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "type": "module",
   "license": "MIT",
   "private": true,
