--- a/chatRoom/client/package.json
+++ b/chatRoom/client/package.json
@@ -38,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "daisyui": "^4.4.17"
+    "daisyui": "^4.4.17",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7"
   }
 }
