--- a/chatRoom/server/package.json
+++ b/chatRoom/server/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "mongodb": "^6.3.0",
     "uuid": "^9.0.1",
     "ws": "^8.14.2"
   }
